--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha test.js"
   },
+  "repository": "ymichael/tachyons-less",
   "keywords": [
     "tachyons",
     "tachyons-css",
